<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductsActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/products_title"/>

    <ImageView
        android:id="@+id/ivMacbook"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/foto_macbook"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivMacbook"
        android:text="@string/tv_macbook"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <ImageView
        android:id="@+id/ivMacbookPro"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/foto_macbookpro"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/ivMacbook"
        />

    <TextView
        android:id="@+id/tvMacbookPro"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivMacbookPro"
        android:text="@string/tv_macbookPro"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <ImageView
        android:id="@+id/ivAirpods"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/foto_airpods"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvAirpods"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintEnd_toStartOf="@id/tvMacbookPro"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivAirpods"
        android:text="@string/tv_airpods"
        android:textAlignment="center"
        android:gravity="center_horizontal"/>

</androidx.constraintlayout.widget.ConstraintLayout>