<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServicesActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/services_title"/>

    <ImageView
        android:id="@+id/ivMobile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/mobile_development"/>

    <TextView
        android:id="@+id/tvMobile"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ivMobile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/tvMobile"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <ImageView
        android:id="@+id/ivWeb"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/tvMobile"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/web_development"/>

    <TextView
        android:id="@+id/tvWeb"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ivWeb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/tvWeb"
        android:textAlignment="center"
        android:gravity="center_horizontal"/>

    <ImageView
        android:id="@+id/ivDesing"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/tvWeb"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/web_desing"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ivDesing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/tvDesing"
        android:textAlignment="center"
        android:gravity="center_horizontal"/>











</androidx.constraintlayout.widget.ConstraintLayout>